This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
2/25/19: Fixed handling of Search shift offset when toggling Apply image shift
offset or defining a a View/Search shift offset.  Prevented the IS of the
Search offset from being applied before going to the Search mag (In 3.7).

2/17/19: Fixed saving frame stack mdoc and getting last dose rate from K2/K3
through socket interface (In 3.7).

2/13/19: Added 2D arrays and ability to do arithmetic in subscripts.

2/4/19: SEM_3-7-1
2/4/19: Fixed library problem with shrmemframe by switching to different
Microsoft libraries, fixed manifest in nohang version, fixed stage moving to
not try to call command that takes speed when it shouldn't (In 3.7).

2/3/19: Fixed treatment of GIF mode on JEOL when mag call does not indicate
GIF (In 3.7).

1/30/19: SEM_3-7-0
1/30/19: Check properties, setting, calibrations for being UTF-8 and accept
that, but give specific message for other non-ASCII encodings.

1/29/19: Made camera setup dialog check frame alignment parameters when align
is turned on and change them if appropriate.

1/29/19: Fixed AutoGainFactors and scaling of Ceta images, broken 5/29/18.

1/25/19: Fixed variable substitution into the string argument of a function
call.

1/25/19: Fixed crash from ReduceImage command.

1/25/19: Fixed preserving walk-up reference during walk-down of bidirectional
series if it does image shift reset or STEM focusing.

* 1/22/19: The one-line script window is now resizable and can contain up to 5
scripts.  The window will reopen on program startup if script windows do.

* 1/22/19: CPU-based frame alignment for K2/K3 is now done through a separate
program to solve memory leaks in DM, allow faster FFTs with Intel libraries,
and eliminate license issues with using FFTW.
